[build-system]
requires = ["poetry-core>=1.4.0"]

[project]
name = "Pharcobial"
version = "1.0.0"

[tool.mypy]
exclude = ["build/", "dist/"]
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "pharcobial"
version = "1.0.0"
description = "A game."
authors = ["unparalleled-js <yingthi@live.com>"]
readme = "README.md"
include = ["src/pharcobial"]

[tool.poetry.dependencies]
python = "^3.10|^3.11"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"

[tool.poetry.scripts]
play_pharcobial = "pharcobial.main:run"
