[build-system]
requires = ["poetry-core>=1.4.0"]

[project]
name = "Trees Have Legs"
version = "1.0.0"

[tool.mypy]
exclude = ["build/", "dist/"]
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "treeshavelegs"
version = "1.0.0"
description = "A game."
authors = ["antazoey <admin@antazoey.me>"]
readme = "README.md"
include = ["src/treeshavelegs"]

[tool.poetry.dependencies]
python = "^3.10|^3.11"
pygame = "^2.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-mock = "3.10.0"

[tool.poetry.scripts]
play_thl = "treeshavelegs.main:cli"
